<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Vistas.Autenticacion.LogIn"> <!-- Concatenar la clase al layout -->

    <TextView
        android:id="@+id/Login_1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:text="@string/Login_1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Login_2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:text="@string/Login_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_1" />

    <ImageView
        android:id="@+id/Login_3"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginEnd="@dimen/Loguin_pading"
        app:layout_constraintBottom_toTopOf="@+id/Login_4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_2"
        app:srcCompat="@drawable/img_login" />

    <TextView
        android:id="@+id/Login_4"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:layout_marginBottom="10dp"
        android:text="@string/Login_3"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Login_5"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Login_5"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:layout_marginBottom="30dp"
        android:autofillHints=""
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:foreground="@drawable/plain_text_loguin"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/Login_6"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <TextView
        android:id="@+id/Login_6"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:layout_marginBottom="10dp"
        android:text="@string/Login_4"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Login_7"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/Login_7"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:layout_marginBottom="8dp"
        android:backgroundTint="#00FFFFFF"
        android:ems="10"
        android:foreground="@drawable/plain_text_loguin"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:paddingLeft="5dp"
        app:layout_constraintBottom_toTopOf="@+id/Login_8"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="SpeakableTextPresentCheck" />

    <CheckBox
        android:id="@+id/Login_8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:buttonTint="@color/Color_Primario"
        android:text="@string/Login_5"
        app:layout_constraintBottom_toTopOf="@+id/Login_9"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:ignore="TouchTargetSizeCheck,TouchTargetSizeCheck" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/Login_9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.6" />

    <TextView
        android:id="@+id/Login_10"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:text="@string/Login_6"
        android:textColor="#448AFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_8" />

    <Button
        android:id="@+id/Login_11"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:background="@drawable/boton_login"
        android:text="@string/Login_7"
        android:textColor="@color/Texto_Colores_Botones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_10" />

    <Button
        android:id="@+id/Login_12"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:background="@drawable/boton_login"
        android:text="@string/Login_8"
        android:textColor="@color/Texto_Colores_Botones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Login_11" />

    <TextView
        android:id="@+id/Login_13"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:layout_marginBottom="8dp"
        android:text="@string/Login_9"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/Login_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/Login_14"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:layout_marginBottom="16dp"
        android:text="@string/Login_10"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>