<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".Vistas.Autenticacion.CreateAccount">

    <TextView
        android:id="@+id/textView17"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:text="@string/CreateAccount_1"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:text="@string/CreateAccount_2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView17" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/Loguin_pading"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="@dimen/Loguin_pading"
        android:layout_marginBottom="32dp"
        android:fillViewport="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView16">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/textView1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/CreateAccount_3"
                    app:layout_constraintBottom_toTopOf="@+id/Login_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/CreateAccount_EditText_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#00FFFFFF"
                    android:ems="10"
                    android:foreground="@drawable/plain_text_loguin"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:paddingLeft="5dp"
                    app:layout_constraintBottom_toTopOf="@+id/Login_6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Login_4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/CreateAccount_4"
                    app:layout_constraintBottom_toTopOf="@+id/Login_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/CreateAccount_EditText_surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#00FFFFFF"
                    android:ems="10"
                    android:foreground="@drawable/plain_text_loguin"
                    android:inputType="textPersonName"
                    android:minHeight="48dp"
                    android:paddingLeft="5dp"
                    app:layout_constraintBottom_toTopOf="@+id/Login_6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Login_6"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/CreateAccount_5"
                    app:layout_constraintBottom_toTopOf="@+id/Login_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText
                    android:id="@+id/CreateAccount_EditText_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#00FFFFFF"
                    android:ems="10"
                    android:foreground="@drawable/plain_text_loguin"
                    android:inputType="phone"
                    android:minHeight="48dp"
                    android:paddingLeft="5dp"
                    app:layout_constraintBottom_toTopOf="@+id/Login_6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Login_2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/CreateAccount_6"
                    app:layout_constraintBottom_toTopOf="@+id/Login_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText

                    android:id="@+id/CreateAccount_EditText_email"

                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#00FFFFFF"
                    android:ems="10"
                    android:foreground="@drawable/plain_text_loguin"
                    android:inputType="textEmailAddress"
                    android:minHeight="48dp"
                    android:paddingLeft="5dp"
                    app:layout_constraintBottom_toTopOf="@+id/Login_6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/Login_13"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="10dp"
                    android:text="@string/CreateAccount_7"
                    app:layout_constraintBottom_toTopOf="@+id/Login_5"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toStartOf="parent" />

                <EditText

                    android:id="@+id/CreateAccount_EditText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginLeft="0dp"
                    android:layout_marginTop="0dp"
                    android:layout_marginEnd="0dp"
                    android:layout_marginRight="0dp"
                    android:layout_marginBottom="15dp"
                    android:backgroundTint="#00FFFFFF"
                    android:ems="10"
                    android:foreground="@drawable/plain_text_loguin"
                    android:inputType="textPassword"
                    android:minHeight="48dp"
                    android:paddingLeft="5dp"
                    app:layout_constraintBottom_toTopOf="@+id/Login_6"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    tools:ignore="SpeakableTextPresentCheck" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/CreateAccount_CheckBox_privacy_policies"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:buttonTint="@color/Color_Primario"
                    android:text="@string/CreateAccount_8"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/Login_7" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/CreateAccountcreate_Button_create_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/boton_login"
                    android:text="@string/CreateAccount_9"
                    android:textColor="@color/Texto_Colores_Botones" />
            </LinearLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>